# logos-blockchain-testing

./: .cargo-deny.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  Cargo.toml  README.md  paths.env  rust-toolchain.toml  versions.env
.github/workflows/: build-binaries.yml  lint.yml  pre-commit.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  annotated-tree.md  architecture-overview.md  authoring-scenarios.md  best-practices.md  chaos.md  ci-integration.md  cucumber-bdd.md  custom-workload-example.md  dsl-cheat-sheet.md  environment-variables.md  examples-advanced.md  examples.md  faq.md  glossary.md  internal-crate-reference.md  introduction.md  logging-observability.md  manual-cluster.md  node-control.md  operations-overview.md  operations.md  part-iv.md  part-v.md  part-vi.md  prerequisites.md  project-context-primer.md  quickstart.md  runners.md  running-examples.md  running-scenarios.md  scenario-lifecycle.md  scenario-model.md  testing-philosophy.md  topology-chaos.md  troubleshooting.md  what-you-will-learn.md  workloads.md  workspace-layout.md
docs/: _config.yml
examples/: Cargo.toml
examples/doc-snippets/src/: architecture_overview_builder_api.rs  chaos_workloads_random_restart.rs  dsl_cheat_sheet_build.rs  dsl_cheat_sheet_build_complete_example.rs  dsl_cheat_sheet_expectations.rs  dsl_cheat_sheet_run_duration.rs  dsl_cheat_sheet_transactions_workload.rs  dsl_cheat_sheet_wallets.rs  dsl_cheat_sheet_workload_chaos.rs  dsl_cheat_sheet_workload_da.rs  dsl_cheat_sheet_workload_execution.rs  examples_advanced_aggressive_chaos_test.rs  examples_advanced_load_progression_test.rs  examples_advanced_sustained_load_test.rs  examples_chaos_resilience.rs  examples_da_and_transactions.rs  examples_simple_consensus.rs  examples_transaction_workload.rs  internal_crate_reference_add_expectation_builder_ext.rs  internal_crate_reference_add_workload_use_in_examples.rs  lib.rs  node_control_accessing_control.rs  node_control_trait.rs  quickstart_adjust_topology.rs  quickstart_core_api_pattern.rs  quickstart_step_6_deploy_and_execute.rs  quickstart_swap_deployer_compose.rs  testing_philosophy_declarative_over_imperative.rs  testing_philosophy_determinism_first.rs  testing_philosophy_minimum_run_windows.rs  testing_philosophy_protocol_time_not_wall_time.rs
examples/src/: cucumber.rs  defaults.rs  demo.rs  lib.rs
examples/tests/: dynamic_join.rs  local_runner_bin_smoke.rs  manual_cluster.rs  node_config_override.rs  orphan_manual_cluster.rs
scripts/: build-bundle.sh  push-ecr-test.sh  run-demo.sh  run-examples.sh  run-test-matrix.sh  setup-nomos-circuits.sh  update-nomos-rev.sh
scripts/ops/: clean.sh  push-ecr-test.sh  update-nomos-rev.sh
scripts/run/: checks.sh  run-examples.sh  run-test-matrix.sh
scripts/setup/: setup-circuits-stack.sh  setup-logos-blockchain-circuits.sh  setup-nomos-circuits.sh  setup-observability.sh
testing-framework/assets/stack/: Dockerfile  Dockerfile.base  Dockerfile.runtime  Dockerfile.testnet  cfgsync.yaml
testing-framework/assets/stack/scripts/: build_test_image.sh  run_nomos.sh  run_nomos_executor.sh  run_nomos_node.sh  setup-logos-blockchain-circuits.sh
testing-framework/configs/: Cargo.toml
testing-framework/configs/src/: lib.rs
testing-framework/configs/src/nodes/: blend.rs  common.rs  executor.rs  mod.rs  node.rs  validator.rs
testing-framework/configs/src/topology/configs/: api.rs  base.rs  blend.rs  consensus.rs  da.rs  deployment.rs  mod.rs  network.rs  runtime.rs  time.rs  tracing.rs  wallet.rs
testing-framework/core/: Cargo.toml
testing-framework/core/src/: kzg.rs  lib.rs  manual.rs
testing-framework/core/src/nodes/: api_client.rs  executor.rs  mod.rs  node.rs  validator.rs
testing-framework/core/src/nodes/common/: binary.rs  mod.rs  node.rs
testing-framework/core/src/nodes/common/api/: client.rs  proxy.rs
testing-framework/core/src/nodes/common/config/: injection.rs  mod.rs  paths.rs  validation.rs
testing-framework/core/src/nodes/common/lifecycle/: cleanup.rs  kill.rs  mod.rs  monitor.rs  spawn.rs
testing-framework/core/src/scenario/: capabilities.rs  cfgsync.rs  control.rs  definition.rs  expectation.rs  http_probe.rs  mod.rs  observability.rs  workload.rs
testing-framework/core/src/scenario/runtime/: block_feed.rs  context.rs  deployer.rs  metrics.rs  node_clients.rs  runner.rs
testing-framework/core/src/topology/: config.rs  deployment.rs  generation.rs  mod.rs  utils.rs
testing-framework/core/src/topology/readiness/: balancer.rs  membership.rs  mod.rs  network.rs
testing-framework/cucumber/src/: world.rs
testing-framework/deployers/compose/: Cargo.toml
testing-framework/deployers/k8s/: Cargo.toml
testing-framework/deployers/local/: Cargo.toml
testing-framework/deployers/local/src/: lib.rs  runner.rs
testing-framework/deployers/local/tests/: restart.rs
testing-framework/env/src/: lib.rs
testing-framework/runners/compose/: Cargo.toml
testing-framework/runners/compose/assets/: docker-compose.yml.tera
testing-framework/runners/compose/src/: cfgsync.rs  cleanup.rs  compose.rs  control.rs  deployer.rs  docker.rs  environment.rs  errors.rs  lib.rs  ports.rs  readiness.rs  workspace.rs
testing-framework/runners/k8s/src/: assets.rs  cleanup.rs  cluster.rs  deployer.rs  (+3 more)
testing-framework/tools/cfgsync/: Cargo.toml
testing-framework/tools/cfgsync_tf/: Cargo.toml
testing-framework/tools/cfgsync_tf/src/: repo.rs  server.rs
testing-framework/tools/cfgsync_tf/src/config/: builder.rs  kms.rs  providers.rs  tracing.rs
testing-framework/tools/cfgsync_tf/src/network/: address.rs  peers.rs
testing-framework/workflows/: Cargo.toml
testing-framework/workflows/src/: lib.rs  manual.rs
testing-framework/workflows/src/builder/: mod.rs
testing-framework/workflows/src/expectations/: consensus_liveness.rs
testing-framework/workflows/src/util/: tx.rs
testing-framework/workflows/src/workloads/: chaos.rs  util.rs
testing-framework/workflows/src/workloads/da/: expectation.rs  workload.rs
testing-framework/workflows/src/workloads/transaction/: expectation.rs  workload.rs
(+45 files in other folders)
