[workspace]
members = [
  "examples",
  "examples/doc-snippets",
  "testing-framework/configs",
  "testing-framework/core",
  "testing-framework/deployers/compose",
  "testing-framework/deployers/k8s",
  "testing-framework/deployers/local",
  "testing-framework/env",
  "testing-framework/tools/cfgsync_tf",
  "testing-framework/workflows",
]
resolver = "2"

[workspace.package]
categories  = []
description = "Logos testing framework workspace (split out from logos-blockchain-node)"
edition     = "2024"
keywords    = ["framework", "nomos", "testing"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://example.invalid/nomos-testing-local"
version     = "0.1.0"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
all = "allow"

[workspace.dependencies]
# Local testing framework crates
testing-framework-config         = { default-features = false, path = "testing-framework/configs" }
testing-framework-core           = { default-features = false, path = "testing-framework/core" }
testing-framework-env            = { default-features = false, path = "testing-framework/env" }
testing-framework-runner-compose = { default-features = false, path = "testing-framework/deployers/compose" }
testing-framework-runner-k8s     = { default-features = false, path = "testing-framework/deployers/k8s" }
testing-framework-runner-local   = { default-features = false, path = "testing-framework/deployers/local" }
testing-framework-workflows      = { default-features = false, path = "testing-framework/workflows" }

# Logos git dependencies (pinned to latest master)
cfgsync_tf                       = { default-features = false, path = "testing-framework/tools/cfgsync_tf" }
lb-api-service                   = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-api-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-blend-message                 = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-blend-message", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-blend-service                 = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-blend-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-chain-broadcast-service       = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-broadcast-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-chain-leader-service          = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-leader-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-chain-network                 = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-network-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-chain-service                 = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-chain-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-common-http-client            = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-common-http-client", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-core                          = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-core", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-cryptarchia-engine            = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-cryptarchia-engine", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-cryptarchia-sync              = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-cryptarchia-sync", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-groth16                       = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-groth16", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-http-api-common               = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-http-api-common", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-key-management-system-service = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-key-management-system-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-ledger                        = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-ledger", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-libp2p                        = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-libp2p", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-network-service               = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-network-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-node                          = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-node", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-poc                           = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-poc", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-pol                           = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-pol", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-sdp-service                   = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-sdp-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-tests                         = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tests", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-time-service                  = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-time-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-tracing                       = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tracing", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-tracing-service               = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tracing-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-tx-service                    = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-tx-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-utils                         = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-utils", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-wallet                        = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-wallet", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-wallet-service                = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-wallet-service", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }
lb-zksign                        = { default-features = false, git = "https://github.com/logos-co/nomos-node.git", package = "logos-blockchain-zksign", rev = "a075fdf3209947572069e7b7b2ff6250576c8831" }

# External crates
async-trait      = { default-features = false, version = "0.1" }
bytes            = { default-features = false, version = "1.3" }
hex              = { default-features = false, version = "0.4.3" }
libp2p           = { default-features = false, version = "0.55" }
overwatch        = { default-features = false, git = "https://github.com/logos-co/Overwatch", rev = "f5a9902" }
overwatch-derive = { default-features = false, git = "https://github.com/logos-co/Overwatch", rev = "f5a9902" }
rand             = { default-features = false, version = "0.8" }
reqwest          = { default-features = false, version = "0.12" }
serde            = { default-features = true, features = ["derive"], version = "1.0" }
serde_json       = { default-features = false, version = "1.0" }
serde_with       = { default-features = false, version = "3.14.0" }
serde_yaml       = { default-features = false, version = "0.9.33" }
tempfile         = { default-features = false, version = "3" }
thiserror        = { default-features = false, version = "2.0" }
tokio            = { default-features = false, version = "1" }
tracing          = { default-features = false, version = "0.1" }
