[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-config"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[dependencies]
hex                              = { default-features = false, version = "0.4.3" }
lb-api-service                   = { workspace = true }
lb-blend-service                 = { features = ["libp2p"], workspace = true }
lb-chain-leader-service          = { workspace = true }
lb-chain-network                 = { workspace = true }
lb-chain-service                 = { workspace = true }
lb-core                          = { workspace = true }
lb-cryptarchia-engine            = { features = ["serde"], workspace = true }
lb-cryptarchia-sync              = { workspace = true }
lb-groth16                       = { workspace = true }
lb-key-management-system-service = { workspace = true }
lb-ledger                        = { features = ["serde"], workspace = true }
lb-libp2p                        = { workspace = true }
lb-node                          = { default-features = false, features = ["testing"], workspace = true }
lb-sdp-service                   = { workspace = true }
lb-time-service                  = { workspace = true }
lb-tracing                       = { workspace = true }
lb-tracing-service               = { workspace = true }
lb-utils                         = { workspace = true }
lb-wallet-service                = { workspace = true }
num-bigint                       = { default-features = false, version = "0.4" }
rand                             = { workspace = true }
serde                            = { features = ["derive"], workspace = true }
testing-framework-env            = { workspace = true }
thiserror                        = { workspace = true }
time                             = { default-features = true, version = "0.3" }
tracing                          = { workspace = true }

[lints]
workspace = true
